# broodkruimel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  api.md  docker-compose.yaml
src/: filesystem.rs  logging.rs  main.rs  user.rs
src/api/: geospatial.rs  location.rs  mod.rs  user.rs
src/filesystem/: database.rs  gps.rs  mod.rs
tests/: ping.sh
tests/location/: push_location.sh
tests/user/: create_and_inspect_users.sh  create_user.sh  get_user.sh  inspect_user.sh  list_users.sh
